Fix layout issues after deploy

--- a/src/styles/block/contact.scss
+++ b/src/styles/block/contact.scss
@@ -16,11 +16,6 @@
     flex-direction: column;
   }
 
-  &____heading {
-    grid-column: 1 / -1;
-    margin-bottom: 40px;
-  }
-
   &__input,
   &__message {
     margin-top: $contact-form-margin-top;
@@ -69,5 +64,10 @@
     letter-spacing: $letter-spacing;
     font-weight: 400;
     color: #191919;
+  }
+
+  .contact__heading {
+    grid-column: 1 / -1;
+    margin-bottom: 40px;
   }
 }
