--- a/src/styles/block/recommended.scss
+++ b/src/styles/block/recommended.scss
@@ -1,6 +1,8 @@
 @use '../utils' as *;
 
 .recommended {
+  @include section-margin-top;
+
   &__products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
